@@ -1,28 +1,41 @@
 #!groovy
 pipeline {
   agent {
-    label 'ubuntu'
+    docker {
+      label 'ubuntu'
+      image 'maven:3-jdk-8'
+      args '-v $HOME/.m2:/root/.m2 -e MAVEN_OPTS="-Xmx1024m" -e USER=$USER'
+    }
   }
   options {
     buildDiscarder logRotator(daysToKeepStr: '14', numToKeepStr: '10')
     timeout(80)
     disableConcurrentBuilds()
   }
-  tools {
-    jdk 'JDK 1.8 (latest)'
-    maven 'Maven 3 (latest)'
-  }
   triggers {
     pollSCM 'H/15 * * * *'
   }
-  environment {
-    MAVEN_OPTS = '-Xmx1024m -XX:MaxPermSize=256m'
-  }
   stages {
+    stage('Maven version') {
+      steps {
+        sh 'mvn -v'
+      }
+    }
+
     stage('Build') {
       steps {
-        sh 'mvn --version'
-        sh 'mvn clean source:jar javadoc:jar install deploy -DskipWiki -Dhttps.protocols=TLSv1,TLSv1.1,TLSv1.2'
+        sh 'mvn -B -DskipTests -DskipAssembly clean package'
+      }
+    }
+
+    stage('Test') {
+      steps {
+        sh 'mvn test'
+      }
+      post {
+        always {
+          junit '**/target/surefire-reports/*.xml'
+        }
       }
     }
   }
